Added an option to download videos using notube.lol via the context menu. Disabled by default for security reasons (I do not own notube.lol; The website is known for using trackers and ads) + Fixed an issue where the youtube player didn't render properly

--- a/manifest.json
+++ b/manifest.json
@@ -35,5 +35,11 @@
     "options_ui": {
       "page": "options.html",
       "open_in_tab": true
-    }
+    },
+"content_scripts": [
+  {
+    "matches": ["https://notube.lol/*"],
+    "js": ["notube-inject.js"],
+    "run_at": "document_end"
+  }]
 }
