--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
     "name": "YouTube Swapper",
     "version": "2.4",
-    "description": "Switch youtube video players, between the default one and a privacy-focused ad-free version.",
+    "description": "Switch Youtube with a privacy-focused ad-free version.",
     "permissions": [
       "contextMenus",
       "tabs",
