--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
 sensitive.txt
 RELEASES
+# Ignore all .log files
+*.log
+# Ignore all .tmp files
+*.tmp
+# Ignore all .bak files
+*.bak
+# Ignore all .swp files
+*.swp
+# Ignore all .DS_Store files
+.DS_Store
+# Ignore all .env files
+.env
+# Ignore all .vscode directory
+.vscode/
+# Ignore all node_modules directory
+node_modules/
+# Ignore all build directories
+build/
+# Ignore all dist directories
+dist/
+# Ignore all coverage directories
+coverage/
