- Refactor API key handling in VideoPlayer.js for improved error handling and user feedback. - Update README.md to clarify API key requirements and provide detailed instructions for obtaining a YouTube API key. - Enhance options.html layout for better organization and user experience, including new settings for notifications and download policies. - Improve styles.css for consistent formatting and visual enhancements across the extension. - Refactor redirect.js for cleaner code structure and improved logging.

--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,9 @@
     }
   },
   "background": {
-    "scripts": ["background.js"]
+    "scripts": [
+      "background.js"
+    ]
   },
   "browser_specific_settings": {
     "gecko": {
@@ -41,12 +43,17 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://notube.lol/*"],
-      "js": ["notube-inject.js"],
+      "matches": [
+        "https://notube.lol/*"
+      ],
+      "js": [
+        "notube-inject.js"
+      ],
       "run_at": "document_end"
-    }],
+    }
+  ],
   "web_accessible_resources": [
-      "PrivaTube.ssh"
-    ],
+    "PrivaTube.ssh"
+  ],
   "content_security_policy": "script-src 'self' https://www.googleapis.com; object-src 'self';"
 }
